--- a/ex009/style.css
+++ b/ex009/style.css
@@ -29,7 +29,7 @@ div#corpo {
     border-radius: 15px;
     flex-direction: column;
     justify-content: center;
-    box-shadow: inset 3px -2px 4px 3px #1e1e1e;
+    box-shadow: inset 3px -2px 4px 3px #292929;
 
 }
 
@@ -85,7 +85,8 @@ button {
     color: white;
     font-weight: bolder;
     align-self: center;
-    box-shadow:inset 2px -2px 3px 4px rgb(0 0 0 / 13%);
+    box-shadow:inset 2px -2px 3px 4px rgba(0, 0, 0, 0.137);
+    cursor: pointer;
 }
 
 button#equals {
